refactor: Prefer String.formatted over String.format
Applied OpenRewrite recipe org.openrewrite.java.migrate.lang.StringFormatted