@@ -37,7 +37,7 @@ public class PeriodUnitConverter extends JacksonAwareStringToTypeConverter<Perio
       return Enum.valueOf(type, value.toUpperCase());
     }
     catch (IllegalArgumentException | NullPointerException e) {
-      throw new InvalidRequestException(Status.BAD_REQUEST, e, String.format("Cannot convert value %s to java enum type %s",
+      throw new InvalidRequestException(Status.BAD_REQUEST, e, "Cannot convert value %s to java enum type %s".formatted(
         value, type.getName()));
     }
   }
