@@ -228,10 +228,10 @@ public class CommandLogger extends ProcessEngineLogger {
   public void warnDeploymentResourceHasWrongName(String resourceName, String[] suffixes) {
     logWarn(
         "035",
-        String.format("Deployment resource '%s' will be ignored as its name must have one of suffixes %s.",
-            resourceName,
-            Arrays.toString(suffixes)
-            ));
+      "Deployment resource '%s' will be ignored as its name must have one of suffixes %s.".formatted(
+        resourceName,
+        Arrays.toString(suffixes)
+      ));
 
   }
 
